2004-03-04  Andras Varga

	* opp_makemake, opp_nmakemake: improved dealing with .msg files.
	To deal with dependencies within a single directory, an
	   $(OBJS) : $(GENERATEDHEADERS)
	dependency was added which forces opp_msgc run first. For dealing
	with multi-directory models, there's a "generateheaders" target
	which the toplevel makefile can depend on, forcing to generate
	all _m.h files before actual compilation begins. The toplevel
	makefile should contain the following dependency then:
	   subdirs $(OBJS) : generateheaders
	(It is not good to add this to every makefile, because it'll
	run too many times, cascading...)


2004-03-03  ------ omnetpp-3.0a2 released ------

2004-03-03  Andras Varga

	* opp_makemake, opp_nmakemake: makefiles now generate a .tstamp
	file on successful build. Useful with multi-directory models: 
	with -w option, the generated makefile will depend on the timestamps
	of included directories, so e.g. a simulation executable gets re-built 
	automatically if its components in other directories have been changed
	*and* built. 

	ATTENTION: this doesn't guarantee that other directories are 
	up-to date!!! Only that *when* they are re-built, executables that
	use them will be re-built too. You still have to do a top-level make
	if you want to ensure that included directories are up-to-date too.

       	* opp_makemake, opp_nmakemake: re-makemake target made recursive
       	[suggested by Daniel Willkomm]

2004-02-22  Andras Varga

	* opp_test: added -a, -N options. -N can be used to test dynamic
	NED loading

2004-02-18  Andras Varga

	* opp_makemake.in: -N, --ignore-ned added (see below)

2004-02-09  Andras Varga

    	* opp_nmakemake: added -N, --ignore-ned option which leaves out .ned 
    	files from the makefile. Useful when you want to load all .ned files 
    	dynamically instead of linking them into the simulation program
    	(see preload-ned-files omnetpp.ini option).

2004-02-06  Andras Varga
