@@ -30,6 +30,7 @@ fragments=""
 makefilein=n
 doxyconf="doxy.cfg"
 cfgfile=""
+generatecfgfile=""
 linkwithobjects=n
 ignorened=n
 force=n
@@ -45,15 +46,19 @@ opp_makemake [-h] [-f] [-m] [-o make-target] [-r] [-n] [-s] [-u userinterface]
         [-c configfile] [-p] [-Idir] [-Llibrary-path] [-llibrary]
         [-i makefile-fragment-file] [directories, library and object files]...
     -h, --help            This help text
-    -f, --force           Force overwriting existing Makefile
+    -f, --force           Force overwriting existing Makefile (or config file)
     -N, --ignore-ned      Leave out .ned files from the makefile. Useful when
                           you want to load all .ned files dynamically (see
                           preload-ned-files omnetpp.ini option).
     -m, --makefile-in     Create Makefile.in instead of Makefile
-    -c, --configfile      Omit variable definitions from generated Makefile,
-                          and let the Makefile include the given config file
-                          instead.
-    -o, --outputfile      Name of simulation executable/library
+    -c cfgfile,           Omit variable definitions from generated Makefile,
+    --configfile cfgfile  and let the Makefile include the given config file
+                          instead (see --genconfig option).
+    --genconfig cfgfile   Creates a config file for use with the -c option.
+                          Does not create a Makefile, so all other options
+                          except -f are ignored. Recommended file name is
+                          omnetppconfig.
+    -o, --outputfile      Name of simulation executable or library
     -r, --recurse         Call make recursively in all subdirectories. If you
                           need to maintain a specific order, declare dependen-
                           cies in the makefrag file.
@@ -94,6 +99,11 @@ EOT
         cfgfile=$1
         ;;
 
+        --genconfig)
+        shift
+        generatecfgfile=$1
+        ;;
+
         -o | --outputfile)
         shift
         outfile=$1
@@ -131,7 +141,7 @@ EOT
             ;;
             *)
             echo "opp_makemake: -u: valid user interface names are Cmdenv or Tkenv" 1>&2
-            exit
+            exit 1
             ;;
         esac
         ;;
@@ -159,7 +169,7 @@ EOT
         else
             if [ ! -f $1 ]; then
                 echo "opp_makemake: $1 is neither an existing file/dir nor a valid option" 1>&2
-                exit
+                exit 1
             fi
             xobjs="$xobjs $1"
         fi
@@ -169,6 +179,46 @@ EOT
     shift
 done
 
+# handle generating a config file first
+if [ "$generatecfgfile" != "" ]; then
+    if [ -f "$generatecfgfile" ]; then
+        if [ ! "$force" = "y" ]; then
+            echo "opp_makemake: use -f to force overwriting existing $generatecfgfile" 1>&2
+            exit 1
+        fi
+    fi
+    cat >"$generatecfgfile" <<EOT
+# OMNeT++ local configuration, generated by opp_makemake --genconfig $generatecfgfile
+NEDC=@NEDC@
+MSGC=@MSGC@
+CXX=@CXX@
+CC=@CC@
+AR=@AR@
+SHLIB_LD=@SHLIB_LD@
+MAKEDEPEND=@MAKEDEPEND@
+
+CFLAGS=@CFLAGS@
+NEDCFLAGS=@NEDCFLAGS@
+LDFLAGS=@LDFLAGS@
+EXE_SUFFIX=@EXE_SUFFIX@
+
+WITH_PARSIM=@WITH_PARSIM@
+WITH_NETBUILDER=@WITH_NETBUILDER@
+
+OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
+OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
+
+TK_LIBS=@TK_LIBS@
+MPI_LIBS=@MPI_LIBS@
+XML_LIBS=@XML_LIBS@
+SYS_LIBS=@SYS_LIBS@
+SYS_LIBS_PURE=-ldl -lsocket -lnsl -lm \$(shell \$(CXX) -print-file-name=libstdc++.a)
+EOT
+    echo "$generatecfgfile created."
+    exit
+fi
+
+# from here on, makefile creation
 if [ $makefilein = "y" ]; then
     outputfile="Makefile.in"
 else
@@ -178,14 +228,14 @@ fi
 if [ -f $outputfile ]; then
     if [ ! "$force" = "y" ]; then
         echo "opp_makemake: use -f to force overwriting existing $outputfile" 1>&2
-        exit
+        exit 1
     fi
 fi
 
 subdirs=
 if [ $recursive = "y" ]; then
     for i in *; do
-        if [ -d $i -a $i != "CVS" -a $i != "backups" -a $i != "." -a $i != ".." ]; then
+        if [ -d "$i" -a "$i" != "CVS" -a "$i" != "backups" -a "$i" != "." -a "$i" != ".." ]; then
             subdirs="$subdirs $i"
         fi
     done
@@ -464,7 +514,7 @@ echo
 
 for i in $subdirs; do
      echo "$i:"
-     echo '	cd' $i '&& $(MAKE)'
+     echo "	cd $i && \$(MAKE)"
      echo
 done
 
@@ -537,14 +587,19 @@ depend:
 	# \$(MAKEDEPEND) \$(INCLUDE_PATH) -fMakefile.in -- *.cc
 	for i in \$(SUBDIRS); do (cd \$\$i && \$(MAKE) depend); done
 
-re-makemake:
+makefiles:
+	# recreate Makefile
 	opp_makemake -f $args1
-	for i in \$(SUBDIRS); do (cd \$\$i && \$(MAKE) re-makemake); done
+	for i in \$(SUBDIRS); do (cd \$\$i && \$(MAKE) makefiles); done
 
-re-makemake-m:
-	#recreate Makefile.in
+makefile-ins:
+	# recreate Makefile.in
 	opp_makemake -f -m $args1
-	for i in \$(SUBDIRS); do (cd \$\$i && \$(MAKE) re-makemake-m); done
+	for i in \$(SUBDIRS); do (cd \$\$i && \$(MAKE) makefile-ins); done
+
+# "re-makemake" and "re-makemake-m" are deprecated, historic names of the above two targets
+re-makemake: makefiles
+re-makemake-m: makefile-ins
 
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
