@@ -590,6 +590,8 @@ print OUT "
 ";
 
 # rule for 'clean'
+$args1 = " $args ";
+$args1 =~ s/ -f / /g;
 print OUT "
 clean:
 \t-del *.obj *.idb *.pdb \$(TARGET)\$(EXE_SUFFIX) .tstamp 2>NUL
@@ -603,9 +605,12 @@ depend:
 \t\$(MAKEDEPEND) \$(INCLUDE_PATH) -f $makefile -- *.$ccext
 \t-for %%i in ( \$(SUBDIRS) ) do cd %%i && $makecommand depend && cd ..
 
-re-makemake:
-\topp_nmakemake -f $args
-\t-for %%i in ( \$(SUBDIRS) ) do cd %%i && $makecommand re-makemake && cd ..
+makefiles:
+\topp_nmakemake -f $args1
+\t-for %%i in ( \$(SUBDIRS) ) do cd %%i && $makecommand makefiles && cd ..
+
+# \"re-makemake\" is a deprecated, historic name of the above target
+re-makemake: makefiles
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
